# NNLS

./: CMakeLists.txt  nnls_mod.h  test.cpp
src/: CMakeLists.txt  NNLS_solver.cpp  NNLS_solver.h  main_file.cpp  main_file.h  nnls_mod.h
test/: CMakeLists.txt  known_test_cases.cpp  matlab_ECSW_matrix.cpp  test_cases.cpp
